--- a/#sourse/scss/variables.scss
+++ b/#sourse/scss/variables.scss
@@ -11,8 +11,8 @@
 
 %titleFont {
   font-weight: 500;
-  font-size: 48px;
-  line-height: 59px;
+  font-size: 3rem;
+  line-height: 1.3;
 }
 
 %textFont {
@@ -32,5 +32,5 @@
 }
 
 $offerBg: #000201;
-
+$offerOkContentBg: #F9F8F4;
 
